2026 01 29 Solution update